# creatept

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: credits.txt
assets/scene/: level1.gltf  level2.gltf  level3.gltf  test.gltf
src/: common_assets.rs  debug.rs  lib.rs  main.rs
src/environment/: fx.rs  jump_pad.rs  mod.rs  setup.rs  spawn_cycle.rs
src/environment/level_loading/: level1.rs  level2.rs  level3.rs  mod.rs  test_level.rs
src/player/: core.rs  input.rs  mod.rs  setup.rs  special_movement.rs
src/player/special_movement/: bomb.rs  explosive.rs  mod.rs  projectile.rs  specific.rs
src/ui/: level_browser.rs  level_end.rs  mod.rs  timer.rs
test/: creatept.js  creatept_bg.js  creatept_bg.wasm.d.ts
