[package]
name = "creatept"
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = "0.23.3"
bevy_egui = "0.25.0"
bevy_xpbd_3d = "0.4.2"
