[package]
name = "creatept"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Inflectrix"]
default-run = "creatept"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = "0.23.3"
bevy_editor_pls = "0.8.1"
bevy_egui = "0.26.0"
bevy_fps_controller = "0.2.5"
bevy_hanabi = "0.10.0"
bevy_rapier3d = { version = "0.25.0", features = ["debug-render"] }
