[package]
name = "creatept"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Inflectrix"]
default-run = "creatept"

[features]
default = []
debug = ["dep:bevy-inspector-egui", "bevy_rapier3d/debug-render"]
editor = ["dep:bevy_editor_pls"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = { version = "0.23.3", optional = true }
bevy_editor_pls = { version = "0.8.1", optional = true }
bevy_egui = "0.26.0"
bevy_fps_controller = "0.2.5"
bevy_hanabi = "0.10.0"
bevy_rapier3d = "0.25.0"

[[bin]]
name = "editor"
required-features = ["editor"]